# stacs-image

./: CMakeLists.txt  README.md  image-mnist.cpp  image-recv.cpp  image-send.cpp  image-usps.cpp  image-yarp.h
