cmake_minimum_required(VERSION 2.8.9)

FIND_PACKAGE(YARP REQUIRED)
INCLUDE_DIRECTORIES(${YARP_INCLUDE_DIRS})
LINK_LIBRARIES(${YARP_LIBRARIES})
SET(CMAKE_CXX_FLAGS "-std=c++11")

ADD_EXECUTABLE(image-send image-send.cpp)
ADD_EXECUTABLE(image-recv image-recv.cpp)
ADD_EXECUTABLE(image-mnist image-mnist.cpp)
ADD_EXECUTABLE(image-usps image-usps.cpp)
ADD_EXECUTABLE(image-labusps image-labusps.cpp)

TARGET_LINK_LIBRARIES(image-send ${YARP_LIBRARIES})
TARGET_LINK_LIBRARIES(image-recv ${YARP_LIBRARIES})
TARGET_LINK_LIBRARIES(image-mnist ${YARP_LIBRARIES})
TARGET_LINK_LIBRARIES(image-usps ${YARP_LIBRARIES})
TARGET_LINK_LIBRARIES(image-labusps ${YARP_LIBRARIES})
